# pklib

./: .gitmodules  CMakeLists.txt  ReadMe.md
include/: pklib.h
include/pklib/: api.h  explode.h  implode.h  pklib.h  tables.h
src/: CMakeLists.txt  PKWareLUTs.c  crc32.c  getCommonSizeConstants.c
src/PKWareLUT/: CMakeLists.txt  PKWareLUTs.c  getLUTSizeConstants.c
src/explode/: CMakeLists.txt  explode.c  getExplodeSizeConstants.c
src/explode/test/: test.cpp
src/implode/: CMakeLists.txt  getImplodeSizeConstants.c  implode.c
src/implode/test/: test.cpp
tests/: ReadMe.md  tests.cpp
